# DeepSpot

./: .gitignore  CITATION.cff  README.md  clean_and_install.sh  environment.yaml  llms.txt  pyproject.toml  requirements.txt  setup.py
.codeboarding/: Core Utilities.md  Data Management & Preprocessing.md  DeepSpot Models.md  Image Processing Module.md  Loss Functions.md  on_boarding.md
.github/workflows/: update-citations.yml
deepspot/: dataloader.py  loss.py  model.py
deepspot/cell/: __init__.py  dataloader.py  loss.py  model.py
deepspot/deepspot2cell/: dataset_creation.py  model.py
deepspot/spot/: __init__.py  dataloader.py  model.py
deepspot/utils/: utils.py  utils_dataloader.py  utils_image.py
example_data/data/h5ad/: NCBI858.h5ad
example_data/data/meta/: NCBI858.json  (+1 more)
example_notebook/: GettingStartedWithDeepSpot_1_preprocessing.ipynb  GettingStartedWithDeepSpot_2_training.ipynb  GettingStartedWithDeepSpot_3.1_inference_pretrained_models.ipynb  GettingStartedWithDeepSpot_3_inference.ipynb  README.md
example_notebook/Visium_spot_example/: GettingStartedWithDeepSpot_1_preprocessing.ipynb  GettingStartedWithDeepSpot_2_training.ipynb  GettingStartedWithDeepSpot_3.1_inference_pretrained_models.ipynb  GettingStartedWithDeepSpot_3_inference.ipynb
example_notebook/Visium_to_Xenium_spot2cell_example/: GettingStartedWithDeepSpot2Cell_1_preprocessing.ipynb  GettingStartedWithDeepSpot2Cell_2_training.ipynb  GettingStartedWithDeepSpot2Cell_3_inference.ipynb  notebook_utils.py
example_notebook/Xenium_single-cell_example/: GettingStartedWithDeepCell_1_preprocessing.ipynb  GettingStartedWithDeepCell_2_training_xenium.ipynb  GettingStartedWithDeepCell_3_inference_xenium.ipynb  GettingStartedWithDeepCell_3_inference_xenium_single-cell.ipynb
scripts/: update_citations.py
